# auditer

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  default-config.yaml  docker-compose.yml
docker/: base_packages.sh  build.sh
proto/auditer/: auditer.proto
src/: main.rs  server.rs  settings.rs
src/db/: mod.rs  version.rs
src/grpc/: mod.rs
