[package]
name        = "auditing"
description = "Chimney Rock Auditing Service"
version     = "0.1.0"
readme      = "README.md"
authors     = ["Nate Strandberg <nater540@gmail.com>"]
edition     = "2018"

[[bin]]
name = "auditer"
path = "src/main.rs"
doc  = false

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true

[profile.release]
opt-level = "s"
lto = true
debug = false
debug-assertions = false

[dependencies]
mongodb = "0.3.12"
actix-rt = "0.2.4"
actix-web = { version = "1.0.5", features = ["ssl", "brotli", "flate2-zlib"] }
clap = "2.33.0"
config = "0.9.3"
chrono = { version = "0.4.7", features = ["serde"] }
futures = "0.1"
failure = "0.1.5"
lazy_static = "1.3.0"
lapin = "^0.25"
serde_yaml = "0.8.9"
serde_json = "1.0.40"
serde = { version = "1.0.98", features = ["derive"] }
juniper = "0.13.1"
uuid   = { version = "0.7.4", features = ["serde", "v4"] }

# Logging
log = "0.4.6"
fern = "0.5.8"
