[package]
name        = "auditing"
description = "Chimney Rock Auditing Service"
version     = "0.1.0"
readme      = "README.md"
authors     = ["Nate Strandberg <nater540@gmail.com>"]
edition     = "2018"
build       = "build.rs"

[[bin]]
name = "auditer"
path = "src/main.rs"
doc  = false

[dependencies]
mongodb = "0.3.12"
clap = "2.33.0"
config = "0.9.3"
chrono = { version = "0.4.7", features = ["serde"] }
futures = "0.1"
failure = "0.1.5"
lazy_static = "1.3.0"
lapin = "0.26.1"
lapin-futures = "0.26.1"
serde_yaml = "0.8.9"
serde_json = "1.0.40"
serde = { version = "1.0.98", features = ["derive"] }
juniper = "0.13.1"
url = "2.1.0"
uuid   = { version = "0.7.4", features = ["serde", "v4"] }

# Database
bson = "0.13"
r2d2 = "0.8.5"
r2d2-mongodb = "0.2.2"
wither = "0.8.0"
wither_derive = "0.8.0"

# GRPC
bytes = "0.4"
prost = "0.5"
tokio = "0.1"
hyper = "0.12"
tower-util = "0.1"
tower-hyper = "0.1"
tower-service = "0.2"
tower-grpc =  { git = "https://github.com/tower-rs/tower-grpc" }
tower-request-modifier = { git = "https://github.com/tower-rs/tower-http" }

# Logging
log = "0.4.8"
fern = "0.5.8"

openssl-sys = "*"

[build-dependencies]
tower-grpc-build = { git = "https://github.com/tower-rs/tower-grpc",  features = ["tower-hyper"] }

[features]
# Force openssl-sys to staticly link in the openssl library.
# Necessary when cross compiling to x86_64-unknown-linux-musl.
vendored = ["openssl-sys/vendored"]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true

[profile.release]
opt-level = "s"
lto = true
debug = false
debug-assertions = false
